--- a/index.ipynb
+++ b/index.ipynb
@@ -1145,10 +1145,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
@@ -1158,10 +1156,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [],
    "source": [
     "distance(fred, natalie) # 4.123105625617661"
@@ -1192,11 +1188,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[None, None, None, None, None, None]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "distances = []\n",
     "for neighbor in neighbors:\n",
@@ -1217,10 +1222,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
@@ -1230,10 +1233,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [],
    "source": [
     "distance_with_neighbor(fred, natalie)\n",
@@ -1249,10 +1250,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
@@ -1261,10 +1260,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [],
    "source": [
     "distance_all(fred, neighbors)\n",
@@ -1285,10 +1282,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
@@ -1297,10 +1292,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [],
    "source": [
     "nearest_neighbors(fred, neighbors, 2)\n",
